# state-machine

./: .gitignore  LICENSE  README.md  article.tex  meson.build
example/: main.cpp
fsm/: StateMachine.h
fsm/actions/: ByDefault.h  Maybe.h  Nothing.h  On.h  OneOf.h  TransitionTo.h  Will.h
part1/: example.cpp
part2/: Door.h  example.cpp
part2/fsm/: StateMachine.h
part2/fsm/actions/: ByDefault.h  Maybe.h  On.h  OneOf.h  TransitionTo.h  Will.h
part3/: article.md  example.cpp
part3/fsm/utils/: StaticString.h  arrayUtils.h
part4/: Door.h  article.md  example.cpp
part4/fsm/: StateMachine.h
part4/fsm/actions/: Maybe.h  Nothing.h  TransitionTo.h  utils.h
part4/fsm/types/: Types.h  utils.h
part4/fsm/utils/: StaticString.h  arrayUtils.h
scripts/: build.sh  init.sh
